Added first blog post: NFL Pick Valuation

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,3 +1,4 @@
+{{ partial "mathjax_support.html" . }}
 <div class="header">
     <div class="title">
         <h1><a href="{{.Site.BaseURL}}">{{.Site.Title}}</a></h1>
@@ -66,3 +67,4 @@
         </div>
     {{ end }}
 </div>
+</script>
