--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,6 +45,7 @@
 <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ "/css/pure-min.css" | absURL }}">
+<link rel="shortcut icon" type="image/x-icon" href= "/favicon.ico">
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="{{ "/css/grids-responsive-old-ie-min.css" | absURL}}">
 <![endif]-->
