--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -46,6 +46,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ "/css/pure-min.css" | absURL }}">
 <link rel="shortcut icon" type="image/x-icon" href= "/favicon.ico">
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="{{ "/css/grids-responsive-old-ie-min.css" | absURL}}">
 <![endif]-->
